--- a/resource-page/P-12007.md
+++ b/resource-page/P-12007.md
@@ -3,3 +3,5 @@
 ![P. 12007](https://berlpap.smb.museum/Original/P_12007_S1_001.jpg)
 
 [Read More](https://berlpap.smb.museum/16501/)
+
+[Back](./resources.html)
