--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -3,3 +3,5 @@
 ![P. 17469](https://berlpap.smb.museum/Original/P_17469_R_2_001.jpg)
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
+
+[Back](./resources.html)
