--- a/resource-page/P-12007.md
+++ b/resource-page/P-12007.md
@@ -1,6 +1,20 @@
-## P.12007
+## _Papyrus 12007_: Geometric Problem from Euclid's Elements
 
 ![P. 12007](https://berlpap.smb.museum/Original/P_12007_S1_001.jpg)
+
+### Text
+4 - - γ̣ράμμα̣ - - 5 . . τ̣οῖς ἰσοπλεύροις
+6 . . . τ̣οῦ ἰσοπλεύρου
+
+### Translation
+4 - - picture - - 5 . . with equal sides
+6 . . . of the equilateral
+
+### Notes
+Width: 6.5 cm
+12 lines, only a few words visible
+γράμμα could possibly be διάγραμμα (diagram)
+τοῦ ἰσοπλεύρου most likely describes a triangle
 
 [Read More](https://berlpap.smb.museum/16501/)
 
