--- a/resource-page/P-12007.md
+++ b/resource-page/P-12007.md
@@ -3,11 +3,17 @@
 ![P. 12007](https://berlpap.smb.museum/Original/P_12007_S1_001.jpg)
 
 ### Text
-4 - - γ̣ράμμα̣ - - 5 . . τ̣οῖς ἰσοπλεύροις
+4 - - γ̣ράμμα̣ - - 
+
+5 . . τ̣οῖς ἰσοπλεύροις
+
 6 . . . τ̣οῦ ἰσοπλεύρου
 
 ### Translation
-4 - - picture - - 5 . . with equal sides
+4 - - picture - - 
+
+5 . . with equal sides
+
 6 . . . of the equilateral
 
 ### Notes
