--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -4,4 +4,37 @@
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
 
-[Back](./resources.html)
+### Date
+
+75 - 125 CE
+
+### Text
+
+ε´ Ἐὰν εὐθεῖα γραμμὴ τμηθῇ εἰς ἴσα καὶ ἄνισα, τὸ
+
+ὑπὸ τῶν ἀνίσων τῆς ὅλης τμημάτων περιεχόμενον
+
+ὀρθογώνιν μετὰ τοῦ ἀπὸ τῆς μεταξὺ τῶν τομῶν
+
+τετραγώνου ἴσον ἐστὶ τῷ ἀπὸ τῆς ἠμισείας τετραγώνῳ.
+
+### Translation
+
+If a straight line be cut into equal and unequal segments, 
+
+the rectangle contained by the unequal segments of the whole together 
+
+with the square on the straight line between the points of section is equal 
+
+to the square on the half. [T. L. Heath]
+
+### Notes
+8.5 x 15.2 cm
+
+Proposition 5 of Book II of the Elements
+
+Irregular uncial letters, no iota subscript, slight spelling errors
+
+Unlabeled diagram
+
+[Back](./resource-page.html)
