--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -1,7 +1,21 @@
-## _Papyrus 17469_:
+## _Papyrus 17469_ (P. 17469): Excerpt from Euclid's Elements I Propositions 8–10
 
 ![P. 17469](https://berlpap.smb.museum/Original/P_17469_R_2_001.jpg)
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
+
+### Date
+
+2nd century AD
+
+### Text 
+
+
+### Translation
+
+
+### Notes
+
+Possibly written by a school teacher
 
 [Back](./resource-page.html)
