--- a/resource-page/P-12007.md
+++ b/resource-page/P-12007.md
@@ -2,6 +2,10 @@
 
 ![P. 12007](https://berlpap.smb.museum/Original/P_12007_S1_001.jpg)
 
+### Date
+
+3rd century BCE
+
 ### Text
 4 - - γ̣ράμμα̣ - - 
 
