--- a/resource-page/P-12007.md
+++ b/resource-page/P-12007.md
@@ -1,4 +1,4 @@
-## _Papyrus 12007_ (_P. 12007_): Geometric Problem from Euclid's Elements
+## _Papyrus_ 12007 (_P._ 12007): Geometric Problem from Euclid's Elements
 
 ![P. 12007](https://berlpap.smb.museum/Original/P_12007_S1_001.jpg)
 
