--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -1,4 +1,4 @@
-## _Papyrus 17469_ (P. 17469): Excerpt from Euclid's Elements I Propositions 8–10
+## _Papyrus_ 17469 (_P._ 17469): Excerpt from Euclid's Elements I Propositions 8–10
 
 ![P. 17469](https://berlpap.smb.museum/Original/P_17469_R_2_001.jpg)
 
@@ -14,7 +14,7 @@
 
 ### Notes
 
-Possibly written by a school teacher
+Possibly written by a schoolteacher
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
 
