--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -18,4 +18,4 @@ Possibly written by a schoolteacher
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
 
-[Back](./resources.html)
+[Back](../resources.html)
