--- a/resource-page/P-12007.md
+++ b/resource-page/P-12007.md
@@ -6,6 +6,10 @@
 
 3rd century BCE
 
+### Location
+
+Elephantine, Egypt
+
 ### Text
 4 - - γ̣ράμμα̣ - - 
 
@@ -25,7 +29,7 @@ Width: 6.5 cm
 
 12 lines, only a few words visible
 
-γράμμα could possibly be διάγραμμα (diagram)
+γράμμα could be διάγραμμα (diagram)
 
 τοῦ ἰσοπλεύρου most likely describes a triangle
 
