--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -4,17 +4,24 @@
 
 ### Date
 
-2nd century AD
+2nd century CE (second half)
 
 ### Text 
-
 
 ### Translation
 
 
 ### Notes
 
+13.5 x 6 cm
+
 Possibly written by a schoolteacher
+
+#### Book I Prop. 8 Diagram
+
+#### Book I Prop. 9 Diagram
+
+#### Book I Prop. 10 Diagram
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
 
