--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -6,16 +6,41 @@
 
 2nd century CE (second half)
 
+### Location
+
+Unknown
+
 ### Text 
+
+[Fragment of Elements I Prop 8 diagram]  Ḥ’ 
+
+[τὴν δοθ]ε̣ῖσαν γων[ίαν εὐ]θὺ
+[γραμμ]ῶν δίχα τεμεῖν
+
+[Fragment of Elements I Prop 9 diagram]  Θ’ 
+
+[τὴν δοθεῖ]σ̣αν εὐθεῖαν̣ π̣επρασ-
+[μένην] δίχα τεμεῖν
+
+[Fragment of Elements I Prop 10 diagram]  [Ι]’ 
 
 ### Translation
 
+[Fragment of Elements I Prop 8 diagram]  8
+
+Given that a straight line cuts through the middle of the angle…
+
+[Fragment of Elements I Prop 9 diagram]  9
+
+Given that a finite straight line cuts through the middle…
+
+[Fragment of Elements I Prop 10 diagram]  10
 
 ### Notes
 
 13.5 x 6 cm
 
-Possibly written by a schoolteacher
+Possibly written by a schoolteacher (see edition) 
 
 #### Book I Prop. 8 Diagram
 
@@ -24,5 +49,7 @@ Possibly written by a schoolteacher
 #### Book I Prop. 10 Diagram
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
+
+[Edition](https://www.degruyter.com/journal/key/apf/40/1/html)
 
 [Back](../resources.html)
