--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -44,7 +44,7 @@ Possibly written by a schoolteacher (see edition)
 
 #### Book I Prop. 8 Diagram
 
-[Diagram I.8](../images/diagrambook1prop8.gif)
+![Diagram I.8](../images/diagrambook1prop8.gif)
 
 #### Book I Prop. 9 Diagram
 
