--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -48,6 +48,8 @@ Possibly written by a schoolteacher (see edition)
 
 #### Book I Prop. 9 Diagram
 
+![Diagram I.9](../images/diagrambook1prop9.gif)
+
 #### Book I Prop. 10 Diagram
 
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
