--- a/resource-page/P-17469.md
+++ b/resource-page/P-17469.md
@@ -52,6 +52,10 @@ Possibly written by a schoolteacher (see edition)
 
 #### Book I Prop. 10 Diagram
 
+![Diagram I.10](../images/diagrambook1prop10.gif)
+
+[Image Source](https://web.calstatela.edu/faculty/hmendel/Ancient%20Mathematics/Euclid/Euclid%20I/Euclid.1.Intro.html)
+
 [Read More](https://berlpap.smb.museum/record/?result=0&Alle=17469)
 
 [Edition](https://www.degruyter.com/journal/key/apf/40/1/html)
